--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
 
   <title>Patternme</title>
@@ -119,52 +118,48 @@
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- ======= Header ======= -->
-  <header id="header" class="">
-    <div class="container d-flex align-items-center justify-content-between">
-
+  <header id="header" class="fixed-top">
+    <div class="container center">
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="index.html" class="logo"><img src="patternme.png" alt="patternme logo" class="img-fluid"></a>
-
-
     </div>
   </header>
   <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex align-items-center justify-content-center">
-    <div class="container" data-aos="fade-up">
-
-    <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
-        <div class="col-xl-8 col-lg-8">
-          <h1>Personalized Pattern Designs Customized For You<span>.</span></h1>
-          <h2>Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.</h2>
-        </div>
-    </div>
-
-    <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
-      <div class="col-xl-5 col-lg-5 text-left">
-        <div class="footer-newsletter">
-          <!-- Begin Mailchimp Signup Form -->
-              <div id="mc_embed_signup">
-                <form action="https://patternme.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll">
-                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
-                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_515fdf03c460cd13fff01535c_233939e4f6" tabindex="-1" value=""></div>
-                      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+  <section id="hero" class="hero d-flex">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 order-2 order-lg-1 
+         d-flex flex-column justify-content-center">
+          <h1 data-aos="fade-up">Personalized Pattern Designs Customized For You<span>.</span></h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.</h2>
+          <div data-aos="fade-up" data-aos-delay="600">
+            <div class="text-lg-start">
+              <div class="footer-newsletter">
+                <!-- Begin Mailchimp Signup Form -->
+                    <div id="mc_embed_signup">
+                      <form action="https://patternme.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div id="mc_embed_signup_scroll">
+                          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_515fdf03c460cd13fff01535c_233939e4f6" tabindex="-1" value=""></div>
+                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                          </div>
+                      </form>
                     </div>
-                </form>
+                    <h2 class="subscrib">Subscribe now to stay updated for our launch & get a 20$ discount code.</h2>
+                <!--End mc_embed_signup-->
               </div>
-          <!--End mc_embed_signup-->
-       </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 hero-img order-1 order-lg-2 fixed" data-aos="zoom-out" data-aos-delay="200">
+          <img src="assets/img/landing1.png" class="img-fluid" alt="Our Vision">
+        </div>
       </div>
-      <div class="col-xl-12 col-lg-12">
-      <h2>Subscribe now to stay updated for our launch & get a future 20$ discount code.</h2>
-      </div>
-    </div>
     </div>
   </section>
-
   <!-- End Hero -->
 
   <main id="main">
@@ -172,7 +167,6 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <img src="assets/img/vision.png" class="img-fluid" alt="Our Vision">
@@ -181,12 +175,11 @@
             <h1>Our Vision</h1>
             <h2>Is to help our customers standout by providing each and every one of them with personalized & one of a kind custom pattern designs for their clothing in a quick, easy and seamless way.
             </h2>
-            <h1>Also</h1>
+            <h1>In Addition</h1>
             <h2>Patternme is eco-friendly because it helps reduce waste,while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufactures products based on demand.
             </h2>
           </div>
         </div>
-
       </div>
     </section>
     <!-- End About Section -->
@@ -202,23 +195,23 @@
         <div class="row">
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box">
-              <h1>1. Select</h1>
+              <h2 class="orangeheaderh2">1. Select A Product</h2>
               <img src="assets/img/select.png" class="img-fluid" alt="select">
-              <h2>Frist you select a product from the wide range of  high quality clothing products thats avalabile on the website for your custom patterns designs to go on.</h2>
+              <h2>First you select a product from the wide range of  high quality clothing products thats avalabile on the website for your custom patterns designs to go on.</h2>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <h1>2. Personalize</h1>
+              <h2 class="orangeheaderh2">2. Personalize</h2>
               <img src="assets/img/interface.png" class="img-fluid" alt="interface">
-              <h2>Once you select the product the site takes you to an interface for you to input the pattern design requirements.</h2>
+              <h2>Once you select a product, the site takes you to an interface for you to input the pattern design requirements.</h2>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <h1>3. Preview</h1>
+              <h2 class="orangeheaderh2">3. Preview</h2>
               <img src="assets/img/preview.jpg" class="img-fluid" alt="preview">
               <h2>You can preview the generated pattern and adjust options to your taste and get multiple different pattern designs.</h2>
             </div>
@@ -226,28 +219,75 @@
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <h1>4. Purchase</h1>
-              <img src="assets/img/Purchase.jpg" class="img-fluid" alt="Purchase">
-              <h2>You can see a mockup of the product with the generated pattern design on it, Once the order is confirmed we print the fabric with your custom pattern on it, cut and sew it togther to the selected product and size and ship it to you !.</h2>
+              <h2 class="orangeheaderh2">4. Purchase</h2>
+              <img src="assets/img/purchase.png" class="img-fluid" alt="Purchase">
+              <h2>You can see a mockup of the product with the generated pattern design on it, Once the order is confirmed we print the fabric with your custom pattern on it, cut and sew it togther to the selected product and size and ship it to you.</h2>
             </div>
           </div>
         </div>
       </div>
     </section><!-- End Services Section -->
-
-
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
+   <!-- ======= Footer ======= -->
+   <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-12">
+            <div class="footer-newsletter footer-info">
+              <h2 class="subscribenow"> Subscribe Now</h2>
+              <!-- Begin Mailchimp Signup Form -->
+                  <div id="mc_embed_signup">
+                    <form action="https://patternme.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <div id="mc_embed_signup_scroll">
+                        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
+                          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_515fdf03c460cd13fff01535c_233939e4f6" tabindex="-1" value=""></div>
+                          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                        </div>
+                    </form>
+                  </div>
+                  <h2 class="subscrib">Subscribe now to stay updated for our launch & get a 20$ discount code.<br> <a href="">Privacy policy</a>
+                  </h2>
+              <!--End mc_embed_signup-->
+            </div>
+          </div>
+
+          <div class="col-lg-1 col-md-12">
+          </div>
+
+          <div class="col-lg-3 col-md-12">
+            <div class="footer-info text-center">
+              <h2 class="subscribenow"> Contact Info</h2>
+              <h2 class="subscrib">Email: <a href="mailto:info@patternme.me"> info@patternme.me</a></h2>
+            </div>
+          </div>
+
+          <div class="col-lg-1 col-md-12">
+          </div>
+    
+          <div class="col-lg-3 col-md-12">
+            <div class="footer-info text-center">
+              <div class="social-links">
+                <h2 class="subscribenow"> Follow Us</h2>
+                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              </div>
+            </div>
+          </div>
+
+        </div>     
+      </div>
+    </div>
+
     <div class="container">
       <div class="copyright">
         &copy;Copyright <span class="Patternme">Patternme</span>. All Rights Reserved
-         <!-- All Rights Reserved -->
       </div>
     </div>
-  </footer>
-  <!-- End Footer -->
+  </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
   <div id="preloader"></div>
