--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </div>
 
           <div class="col-lg-3 col-md-12">
-            <div class="footer-info text-center">
+            <div class="footer-info text-left">
               <h2 class="subscribenow"> Contact Info</h2>
               <h2 class="subscrib">Email: <a href="mailto:info@patternme.me"> info@patternme.me</a></h2>
             </div>
@@ -268,7 +268,7 @@
           </div>
     
           <div class="col-lg-3 col-md-12">
-            <div class="footer-info text-center">
+            <div class="footer-info text-left">
               <div class="social-links">
                 <h2 class="subscribenow"> Follow Us</h2>
                 <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
