--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Patternme</title>
   <meta charset="UTF-8">
   <meta name="description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta name="keywords" content="fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, fashion accessory">
+  <meta name="keywords" content="pattern me, patternme, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, fashion accessory">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Patternme" />
@@ -155,7 +155,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img order-1 order-lg-2 fixed" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/landing1.png" class="img-fluid" alt="Our Vision">
+          <img src="assets/img/landing.png" class="img-fluid" alt="Patternme landing">
         </div>
       </div>
     </div>
@@ -197,14 +197,14 @@
             <div class="icon-box">
               <h2 class="orangeheaderh2">1. Select A Product</h2>
               <img src="assets/img/select.png" class="img-fluid" alt="select">
-              <h2>First you select a product from the wide range of  high quality clothing products thats avalabile on the website for your custom patterns designs to go on.</h2>
+              <h2>First you select a product from the wide range of  high quality clothing products thats available on the website for your custom patterns designs to go on.</h2>
             </div>
           </div>
 
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <h2 class="orangeheaderh2">2. Personalize</h2>
-              <img src="assets/img/interface.png" class="img-fluid" alt="interface">
+              <img src="assets/img/personalize.jpg" class="img-fluid" alt="interface">
               <h2>Once you select a product, the site takes you to an interface for you to input the pattern design requirements.</h2>
             </div>
           </div>
@@ -221,7 +221,7 @@
             <div class="icon-box">
               <h2 class="orangeheaderh2">4. Purchase</h2>
               <img src="assets/img/purchase.png" class="img-fluid" alt="Purchase">
-              <h2>You can see a mockup of the product with the generated pattern design on it, Once the order is confirmed we print the fabric with your custom pattern on it, cut and sew it togther to the selected product and size and ship it to you.</h2>
+              <h2>You can see a mockup of the product with the generated pattern design on it, once the order is confirmed we print the fabric with your custom pattern on it, cut and sew it togther to the selected product and size and ship it to you.</h2>
             </div>
           </div>
         </div>
