--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <h2 class="orangeheaderh2">2. Personalize</h2>
-              <img src="assets/img/personalize.jpg" class="img-fluid" alt="interface">
+              <img src="assets/img/personalize.jpg" class="img-fluid" alt="personalize">
               <h2>Once you select a product, the site takes you to an interface for you to input the pattern design requirements.</h2>
             </div>
           </div>
