--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <meta property="og:title" content="Patternme" />
   <meta property="og:url" content="https://patternme.me/" />
   <meta property="og:description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta property="og:image" content="patternme.png"><meta property="og:image:type" content="image/png" />
-  <meta property="og:image:width" content="400" />
-  <meta property="og:image:height" content="300" />
+  <meta property="og:image" content="patternmefb.png"><meta property="og:image:type" content="image/png" />
   <meta property="og:image:alt" content="Patternme Logo" />
 
   <!-- Favicons -->
