--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="footer-info text-left">
               <div class="social-links">
                 <h2 class="subscribenow"> Follow Us</h2>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.facebook.com/Patternme-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
@@ -301,6 +301,7 @@
   <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
   <script src="assets/vendor/counterup/counterup.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
+  <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/515fdf03c460cd13fff01535c/0491ba0a4795b6ddc95c82c0b.js");</script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
