--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
               <div class="social-links">
                 <h2 class="subscribenow"> Follow Us</h2>
                 <a href="https://www.facebook.com/Patternme-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.instagram.com/patternme.me/" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
