--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Patternme</title>
   <meta charset="UTF-8">
   <meta name="description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta name="keywords" content="pattern me, patternme, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, fashion accessory">
+  <meta name="keywords" content="pattern me, patternme, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Patternme" />
@@ -125,11 +125,10 @@
   <!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="hero d-flex">
+  <section id="hero" class="hero">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 order-2 order-lg-1 
-         d-flex flex-column justify-content-center">
+        <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Personalized Pattern Designs Customized For You<span>.</span></h1>
           <h2 data-aos="fade-up" data-aos-delay="400">Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
@@ -246,7 +245,7 @@
                         </div>
                     </form>
                   </div>
-                  <h2 class="subscrib">Subscribe now to stay updated for our launch & get a 20$ discount code.<br> <a href="">Privacy policy</a>
+                  <h2 class="subscrib">Subscribe now to stay updated for our launch & get a 20$ discount code.<br> <a href="privacy-policy.html">Privacy policy</a>
                   </h2>
               <!--End mc_embed_signup-->
             </div>
@@ -271,7 +270,7 @@
                 <h2 class="subscribenow"> Follow Us</h2>
                 <a href="https://www.facebook.com/Patternme-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="https://www.instagram.com/patternme.me/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/patternme" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
