--- a/index.html
+++ b/index.html
@@ -224,6 +224,32 @@
         </div>
       </div>
     </section><!-- End Services Section -->
+
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h1>Check our Team</h1>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="100">
+              <div class="member-img">
+                <img src="assets/img/team/shirak.jpg" class="img-fluid" alt="shirak Kevorkian">
+                <h2 class="shirak text-center" >SHIRAK KEVORKIAN</h2>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Team Section -->
+
+
+
   </main><!-- End #main -->
 
    <!-- ======= Footer ======= -->
