--- a/index.html
+++ b/index.html
@@ -228,22 +228,24 @@
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
       <div class="container" data-aos="fade-up">
-
         <div class="section-title">
           <h1>Check our Team</h1>
         </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-4 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/shirak.jpg" class="img-fluid" alt="shirak Kevorkian">
-                <h2 class="shirak text-center" >SHIRAK KEVORKIAN</h2>
-
+          <div class="row text-center">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+              <div class="member" data-aos="fade-up" data-aos-delay="100">
+                <div class="member-img">
+                  <img src="assets/img/team/shirak.jpg" class="img-fluid" alt="shirak Kevorkian">
+                  <h2 class="shirak text-center" >SHIRAK KEVORKIAN</h2>
+                  <h2>I am a confident person, conscientious about the work I do. I am flexible and I find it easy to get along with Partners & team members . I am methodical and I take care of my work. I am always motivated and energetic, I always work towards making the best products that my team and I can deliver. In life and work I take the lead in every opportunity I can get.</h2>
+                  <div class="social-links text-center">
+                    <a href="https://www.instagram.com/shirak.kevorkian/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/shirak-kevorkian/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
       </div>
     </section>
     <!-- End Team Section -->
