--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                           </div>
                       </form>
                     </div>
-                    <h2 class="subscrib">Subscribe now to stay updated for our launch & get a 20$ discount code.</h2>
+                    <h2 class="subscrib">Subscribe now to stay updated for our launch.</h2>
                 <!--End mc_embed_signup-->
               </div>
             </div>
@@ -237,7 +237,8 @@
                 <div class="member-img">
                   <img src="assets/img/team/shirak.jpg" class="img-fluid" alt="shirak Kevorkian">
                   <h2 class="shirak text-center" >SHIRAK KEVORKIAN</h2>
-                  <h2>I am a confident person, conscientious about the work I do. I am flexible and I find it easy to get along with partners & team members . I am methodical and I take care of my work. I am always motivated and energetic, I always work towards making the best products that my team and I can deliver. In life and work I take the lead in every opportunity I can get.</h2>
+                  <h2>Founder & CEO</h2>
+                  <!-- <h2>I am a confident person, conscientious about the work I do. I am flexible and I find it easy to get along with partners & team members . I am methodical and I take care of my work. I am always motivated and energetic, I always work towards making the best products that my team and I can deliver. In life and work I take the lead in every opportunity I can get.</h2> -->
                   <div class="social-links text-center">
                     <a href="https://www.instagram.com/shirak.kevorkian/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/shirak-kevorkian/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -273,7 +274,7 @@
                         </div>
                     </form>
                   </div>
-                  <h2 class="subscrib">Subscribe now to stay updated for our launch & get a 20$ discount code.<br> <a href="privacy-policy.html">Privacy policy</a>
+                  <h2 class="subscrib">Subscribe now to stay updated for our launch.<br> <a href="privacy-policy.html">Privacy policy</a>
                   </h2>
               <!--End mc_embed_signup-->
             </div>
