--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
     <div class="container">
       <row>
         <div class="copyright">
-          Bitcoin: <span class="Patternme">bc1qwrqgvzztya944yywjp6dzqedee78rcr634vg5l</span>
+          <!-- Bitcoin: <span class="Patternme">bc1qwrqgvzztya944yywjp6dzqedee78rcr634vg5l</span>
           <br>Ethereum: <span class="Patternme">0xD30088EfCB8308A390e27c0FC45FbC55a5Cb710B</span>
           <br>Tether USD: <span class="Patternme">TA2Z3LAruq5BbhHgWGwiSec5kADTpkCcLb</span>
-          <br>XRP: <span class="Patternme">rwUfrF9wtBiNDTB4ijJWa63JcRSu47mdaz</span>
+          <br>XRP: <span class="Patternme">rwUfrF9wtBiNDTB4ijJWa63JcRSu47mdaz</span> -->
           <br>&copy;Copyright <span class="Patternme">Patternme</span>. All Rights Reserved
         </div>
       </row>
