--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="row">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Personalized Pattern Designs Customized For You<span>.</span></h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">Patternme is an fashion e-commerce that takes the personal requirements of each user and turns it into unique custom pattern/print designs for the clothing sold on the website.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-lg-start">
               <div class="footer-newsletter">
