--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
       <div class="row">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Personalized Pattern Designs Customized For You<span>.</span></h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Patternme is the fashion online store that takes your takes your personal requirements and turns it into unique custom pattern designs for the clothing sold on the website.</h2>
+          <h2 data-aos="fade-up" data-aos-delay="400">Patternme is the fashion online store that takes your takes your personality traits and preferences and turns it into unique custom pattern designs for the clothing sold on the website.
+          </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-lg-start">
               <div class="footer-newsletter">
@@ -170,10 +171,11 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h1>Our Vision</h1>
-            <h2>Is to help our customers standout by providing each and every one of them with personalized & one of a kind custom pattern designs for their clothing in a quick, easy and seamless way.
+            <h2>Is to help our customers stand out by providing each one of them with unique pattern designs, by generating the designs with software using each customer’s personality traits and preferences that are collected on the website without putting the customer through the hassle of designing the piece making things easy and simple for the customer.
             </h2>
             <h1>In Addition</h1>
-            <h2>Patternme is eco-friendly because it helps reduce waste,while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufactures products based on demand.
+            <h2> 
+              Patternme is eco-friendly because it helps reduce waste, while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufactures products based on demand.              
             </h2>
           </div>
         </div>
