--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en">
 
 <head>
-
-  <title>Patternme</title>
+  <title>xariia</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta name="keywords" content="pattern me, patternme, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
+  <meta name="description" content="xariia is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
+  <meta name="keywords" content="pattern me, xariia, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Patternme" />
-  <meta property="og:url" content="https://patternme.me/" />
-  <meta property="og:description" content="Patternme is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta property="og:image" content="patternmefb.png"><meta property="og:image:type" content="image/png" />
-  <meta property="og:image:alt" content="Patternme Logo" />
+  <meta property="og:title" content="xariia" />
+  <meta property="og:url" content="https://xariia.com/" />
+  <meta property="og:description" content="xariia is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
+  <meta property="og:image" content="xariiafb.png"><meta property="og:image:type" content="image/png" />
+  <meta property="og:image:alt" content="xariia Logo" />
 
   <!-- Favicons -->
 
@@ -56,8 +55,8 @@
 
   <!-- Favicons meta-->
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#412a8e">
-  <meta name="apple-mobile-web-app-title" content="Patternme">
-  <meta name="application-name" content="Patternme">
+  <meta name="apple-mobile-web-app-title" content="xariia">
+  <meta name="application-name" content="xariia">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -105,7 +104,6 @@
     mixpanel.track("Video play", {"genre": "hip-hop", "duration in seconds": 42});
   </script>
 
-    
 </head>
 
 <body>
@@ -119,7 +117,7 @@
   <header id="header" class="fixed-top">
     <div class="container center">
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="patternme.png" alt="patternme logo" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="xariia.png" alt="xariia logo" class="img-fluid"></a>
     </div>
   </header>
   <!-- End Header -->
@@ -130,14 +128,14 @@
       <div class="row">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1 data-aos="fade-up">Personalized Pattern Designs Customized For You<span>.</span></h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">Patternme is the fashion online store that takes your takes your personality traits and preferences and turns it into unique custom pattern designs for the clothing sold on the website.
+          <h2 data-aos="fade-up" data-aos-delay="400">xariia is the fashion online store that takes your takes your personality traits and preferences and turns it into unique custom pattern designs for the clothing sold on the website.
           </h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-lg-start">
               <div class="footer-newsletter">
                 <!-- Begin Mailchimp Signup Form -->
                     <div id="mc_embed_signup">
-                      <form action="https://patternme.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <form action="https://xariia.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
                           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -153,7 +151,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img order-1 order-lg-2 fixed" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/landing.png" class="img-fluid" alt="Patternme landing">
+          <img src="assets/img/landing.png" class="img-fluid" alt="xariia landing">
         </div>
       </div>
     </div>
@@ -175,7 +173,7 @@
             </h2>
             <h1>In Addition</h1>
             <h2> 
-              Patternme is eco-friendly because it helps reduce waste, while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. Patternme manufactures products based on demand.              
+              xariia is eco-friendly because it helps reduce waste, while Other fashion brands mass-produce their products, and a high percentage of production becomes waste or it gets burned polluting our beautiful planet. xariia manufactures products based on demand.              
             </h2>
           </div>
         </div>
@@ -266,7 +264,7 @@
               <h2 class="subscribenow"> Subscribe Now</h2>
               <!-- Begin Mailchimp Signup Form -->
                   <div id="mc_embed_signup">
-                    <form action="https://patternme.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <form action="https://xariia.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                       <div id="mc_embed_signup_scroll">
                         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
                           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -287,7 +285,7 @@
           <div class="col-lg-3 col-md-12">
             <div class="footer-info text-left">
               <h2 class="subscribenow"> Contact Info</h2>
-              <h2 class="subscrib">Email: <a href="mailto:info@patternme.me"> info@patternme.me</a></h2>
+              <h2 class="subscrib">Email: <a href="mailto:info@xariia.me"> info@xariia.me</a></h2>
             </div>
           </div>
 
@@ -298,9 +296,9 @@
             <div class="footer-info text-left">
               <div class="social-links">
                 <h2 class="subscribenow"> Follow Us</h2>
-                <a href="https://www.facebook.com/Patternme-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/patternme.me/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/patternme" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.facebook.com/xariia-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/xariia.me/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/xariia" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -312,11 +310,11 @@
     <div class="container">
       <row>
         <div class="copyright">
-          <!-- Bitcoin: <span class="Patternme">bc1qwrqgvzztya944yywjp6dzqedee78rcr634vg5l</span>
-          <br>Ethereum: <span class="Patternme">0xD30088EfCB8308A390e27c0FC45FbC55a5Cb710B</span>
-          <br>Tether USD: <span class="Patternme">TA2Z3LAruq5BbhHgWGwiSec5kADTpkCcLb</span>
-          <br>XRP: <span class="Patternme">rwUfrF9wtBiNDTB4ijJWa63JcRSu47mdaz</span> -->
-          <br>&copy;Copyright <span class="Patternme">Patternme</span>. All Rights Reserved
+          <!-- Bitcoin: <span class="xariia">bc1qwrqgvzztya944yywjp6dzqedee78rcr634vg5l</span>
+          <br>Ethereum: <span class="xariia">0xD30088EfCB8308A390e27c0FC45FbC55a5Cb710B</span>
+          <br>Tether USD: <span class="xariia">TA2Z3LAruq5BbhHgWGwiSec5kADTpkCcLb</span>
+          <br>XRP: <span class="xariia">rwUfrF9wtBiNDTB4ijJWa63JcRSu47mdaz</span> -->
+          <br>&copy;Copyright <span class="xariia">xariia</span>. All Rights Reserved
         </div>
       </row>
     </div>
@@ -337,10 +335,8 @@
   <script src="assets/vendor/counterup/counterup.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/515fdf03c460cd13fff01535c/0491ba0a4795b6ddc95c82c0b.js");</script>
-
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
