--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-  <title>xariia</title>
+  <title>XARIIA</title>
   <meta charset="UTF-8">
-  <meta name="description" content="xariia is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta name="keywords" content="pattern me, xariia, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
+  <meta name="description" content="XARIIA is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
+  <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
   <meta name="author" content="Shirak Kevorkian">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="xariia" />
-  <meta property="og:url" content="https://xariia.com/" />
-  <meta property="og:description" content="xariia is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
-  <meta property="og:image" content="xariiafb.png"><meta property="og:image:type" content="image/png" />
-  <meta property="og:image:alt" content="xariia Logo" />
+  <meta property="og:title" content="XARIIA" />
+  <meta property="og:url" content="https://XARIIA.com/" />
+  <meta property="og:description" content="XARIIA is the online store that takes your personal requirements and turns it into custom pattern designs for your clothing using artificial intelligence.">
+  <meta property="og:image" content="XARIIAfb.png"><meta property="og:image:type" content="image/png" />
+  <meta property="og:image:alt" content="XARIIA Logo" />
 
   <!-- Favicons -->
 
@@ -55,8 +55,8 @@
 
   <!-- Favicons meta-->
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#412a8e">
-  <meta name="apple-mobile-web-app-title" content="xariia">
-  <meta name="application-name" content="xariia">
+  <meta name="apple-mobile-web-app-title" content="XARIIA">
+  <meta name="application-name" content="XARIIA">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/mstile-144x144.png">
   <meta name="theme-color" content="#ffffff">
@@ -117,7 +117,7 @@
   <header id="header" class="fixed-top">
     <div class="container center">
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="xariia.png" alt="xariia logo" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="XARIIA.png" alt="XARIIA logo" class="img-fluid"></a>
     </div>
   </header>
   <!-- End Header -->
@@ -135,7 +135,7 @@
               <div class="footer-newsletter">
                 <!-- Begin Mailchimp Signup Form -->
                     <div id="mc_embed_signup">
-                      <form action="https://xariia.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                      <form action="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&amp;id=233939e4f6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
                           <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter Your E-mail Address" required>
                             <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
@@ -151,7 +151,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img order-1 order-lg-2 fixed" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/landing.png" class="img-fluid" alt="xariia landing">
+          <img src="assets/img/landing.png" class="img-fluid" alt="XARIIA landing">
         </div>
       </div>
     </div>
@@ -289,7 +289,7 @@
           <div class="col-lg-3 col-md-12">
             <div class="footer-info text-left">
               <h2 class="subscribenow"> Contact Info</h2>
-              <h2 class="subscrib">Email: <a href="mailto:info@xariia.me"> info@xariia.me</a></h2>
+              <h2 class="subscrib">Email: <a href="mailto:info@xariia.com"> info@xariia.com</a></h2>
             </div>
           </div>
 
@@ -300,9 +300,9 @@
             <div class="footer-info text-left">
               <div class="social-links">
                 <h2 class="subscribenow"> Follow Us</h2>
-                <a href="https://www.facebook.com/xariia-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.instagram.com/xariia.me/" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/xariia" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://www.facebook.com/XARIIA-108030014702473" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/XARIIA.com/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/XARIIA" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -314,11 +314,11 @@
     <div class="container">
       <row>
         <div class="copyright">
-          <!-- Bitcoin: <span class="xariia">bc1qwrqgvzztya944yywjp6dzqedee78rcr634vg5l</span>
-          <br>Ethereum: <span class="xariia">0xD30088EfCB8308A390e27c0FC45FbC55a5Cb710B</span>
-          <br>Tether USD: <span class="xariia">TA2Z3LAruq5BbhHgWGwiSec5kADTpkCcLb</span>
-          <br>XRP: <span class="xariia">rwUfrF9wtBiNDTB4ijJWa63JcRSu47mdaz</span> -->
-          <br>&copy;Copyright <span class="xariia">xariia</span>. All Rights Reserved
+          <!-- Bitcoin: <span class="XARIIA">bc1qwrqgvzztya944yywjp6dzqedee78rcr634vg5l</span>
+          <br>Ethereum: <span class="XARIIA">0xD30088EfCB8308A390e27c0FC45FbC55a5Cb710B</span>
+          <br>Tether USD: <span class="XARIIA">TA2Z3LAruq5BbhHgWGwiSec5kADTpkCcLb</span>
+          <br>XRP: <span class="XARIIA">rwUfrF9wtBiNDTB4ijJWa63JcRSu47mdaz</span> -->
+          <br>&copy;Copyright <span class="XARIIA">XARIIA</span>. All Rights Reserved
         </div>
       </row>
     </div>
