--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <header id="header" class="fixed-top">
     <div class="container center">
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="index.html" class="logo"><img src="XARIIA.png" alt="XARIIA logo" class="img-fluid"></a>
+      <a href="index.html" class="logo"><img src="xariia.png" alt="XARIIA logo" class="img-fluid"></a>
     </div>
   </header>
   <!-- End Header -->
