--- a/index.html
+++ b/index.html
@@ -240,7 +240,8 @@
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
-                                        <h3 class="font-alt">User Interface</h3>
+                                        <h3 class="font-alt">Design preference selector
+                                        </h3>
                                         <p class="text-muted mb-0">a user interface that makes collecting your design preferences as simple as possible.
                                         </p>
                                     </div>
@@ -305,7 +306,7 @@
                         <!-- <p class="lead fw-normal text-muted mb-5 mb-lg-0">This section is perfect for featuring some information about your application, why it was built, the problem it solves, or anything else! There's plenty of space for text here, so don't worry about writing too much.</p> -->
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0 imgsteps"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
+                        <div class="px-5 px-sm-0"><img class="img-fluid" src="assets/productnoprint.png" alt="a white t-shirt with no print"  /></div>
                     </div>
                 </div>
             </div>
