--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-1 lh-1 mb-3">Unique Pattern Designs Made Just For You.</h1>
                             <p class="lead fw-normal text-muted mb-5">XARIIA is an online platform that transforms your personality traits and design preferences into Unique custom pattern designs for clothing sold on the site.</p>
+                            <p class="lead fw-normal text-muted mb-5">             
+                                Our mission is to simplify custom fashion, make it accessible and affordable to everyone around the world while keeping the process of obtaining a unique design simple and user-friendly, connect the physical and virtual worlds with wearables, reduce waste by doing production on demand, and promote 96 percent more sustainable digital clothing.
+                            </p>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                                 <div class="newsletter">
                                     <!-- Begin Mailchimp Signup Form -->
